fix gap size

--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -96,7 +96,7 @@
       display: grid;
       grid-template-columns: repeat(3, minmax(0, 1fr));
       text-align: center;
-      gap: 8px;
+      gap: 20px;
 
       div {
         border: 1px solid;
